Improve debug logging for job process